--- a/.github/workflows/hao4k.yml
+++ b/.github/workflows/hao4k.yml
@@ -25,7 +25,7 @@ jobs:
     
     - name: Hao4k auto sign in
       env:
-        HAO4K_USERNAME: ${{ secrets.HAO4K_USERNAME }}
-        HAO4K_PASSWORD: ${{ secrets.HAO4K_PASSWORD }}
+        HAO4K_USERNAME: ${{ secrets.desperado666 }}
+        HAO4K_PASSWORD: ${{ secrets.zh123456 }}
         SERVERCHAN_SCKEY: ${{ secrets.SERVERCHAN_SCKEY }}
       run: python signin.py
