--- a/.github/workflows/hao4k.yml
+++ b/.github/workflows/hao4k.yml
@@ -27,5 +27,5 @@ jobs:
       env:
         HAO4K_USERNAME: ${{ secrets.desperado666 }}
         HAO4K_PASSWORD: ${{ secrets.zh123456 }}
-        SERVERCHAN_SCKEY: ${{ secrets.SERVERCHAN_SCKEY }}
+        SERVERCHAN_SCKEY: ${{ secrets.SCT128544TjPlVOwL9d9Ddcz9PIvtEDasy }}
       run: python signin.py
